force-app/main/default/objects/nArchive__nArchive__c/nArchive__nArchive__c.object-meta.xml
<CustomObject>
    <description>Document Export Service</description>
    <label>Document Export Service</label>
    <nameField>
        <label>nArchive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Export Service</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>