force-app/main/default/objects/nArchive__nArchive__c/fields/nArchive__Account__c.field-meta.xml
<CustomField>
    <fullName>nArchive__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Account</description>
    <label>Associated Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Account</relationshipLabel>
    <relationshipName>nArchive</relationshipName>
    <type>Lookup</type>
</CustomField>