force-app/main/default/objects/nArchive__nArchive__c/fields/nArchive__Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>nArchive__Attachment_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Attachment Id (Deprecated).</description>
    <label>Attachment_Id-D</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>