force-app/main/default/objects/nArchive__nArchive__c/fields/nArchive__Current_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>nArchive__Current_Attachment_Id__c</fullName>
    <description>Current Attachment Id</description>
    <label>Current Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>