force-app/main/default/objects/nArchive__nArchive__c/fields/nArchive__Document_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>nArchive__Document_Placeholder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Document Placeholder</description>
    <label>Associated Document Placeholder</label>
    <referenceTo>LLC_BI__Document_Placeholder__c</referenceTo>
    <relationshipLabel>Related Document Placeholder</relationshipLabel>
    <relationshipName>nArchive</relationshipName>
    <type>Lookup</type>
</CustomField>