force-app/main/default/objects/nArchive__nArchive__c/fields/nArchive__DocumentName__c.field-meta.xml
<CustomField>
    <fullName>nArchive__DocumentName__c</fullName>
    <description>Document Name</description>
    <label>Document Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>