force-app/main/default/objects/nArchive__nArchive__c/fields/nArchive__File_Extension__c.field-meta.xml
<CustomField>
    <fullName>nArchive__File_Extension__c</fullName>
    <description>The system populates this required text field with the ContentVersion FileExtension. By default, it is blank.</description>
    <label>File Extension</label>
    <length>40</length>
    <type>Text</type>
</CustomField>