force-app/main/default/objects/nArchive__nArchive__c/fields/nArchive__File_Size__c.field-meta.xml
<CustomField>
    <fullName>nArchive__File_Size__c</fullName>
    <description>The system populates this required number field with the ContentVersion FileSize. By default, it is blank.</description>
    <label>File Size</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>