force-app/main/default/objects/nArchive__nArchive__c/fields/nArchive__LLC_LoanDocument__c.field-meta.xml
<CustomField>
    <fullName>nArchive__LLC_LoanDocument__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated Loan Document Placeholder</description>
    <label>Associated Loan Document Placeholder</label>
    <referenceTo>LLC_BI__LLC_LoanDocument__c</referenceTo>
    <relationshipLabel>Related Loan Document Placeholder</relationshipLabel>
    <relationshipName>nArchive</relationshipName>
    <type>Lookup</type>
</CustomField>