force-app/main/default/objects/nArchive__nArchive__c/fields/nArchive__processdBatchNumber__c.field-meta.xml
<CustomField>
    <fullName>nArchive__processdBatchNumber__c</fullName>
    <description>Processed Batch Number, generated by IICS task.</description>
    <label>Processed Batch Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>