force-app/main/default/objects/nArchive__nArchive__c/fields/nArchive__processedFlag__c.field-meta.xml
<CustomField>
    <fullName>nArchive__processedFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate the DES record has been processed.</description>
    <label>Processed Flag</label>
    <type>Checkbox</type>
</CustomField>