force-app/main/default/objects/nArchive__nArchive__c/fields/nArchive__reprocessFlag__c.field-meta.xml
<CustomField>
    <fullName>nArchive__reprocessFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate that the record should be Reprocessed.</description>
    <label>Reprocess Flag</label>
    <type>Checkbox</type>
</CustomField>